...
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/demo_activate" />

        <TextView
            android:id="@+id/tvPauseResume"
            style="@style/TextAppearance.AppCompat.Caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            android:paddingStart="@dimen/textview_padding"
            android:paddingTop="2dp"
            android:paddingEnd="@dimen/textview_padding"
            android:paddingBottom="2dp"
            android:text="@string/demo_paused"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvStatus"
            app:layout_constraintEnd_toStartOf="@+id/tvStatus"
            app:layout_constraintTop_toTopOf="@+id/tvStatus" />

...
